[project]
name = "pyrealrunner"
version = "0.1.0"
description = "A fake runner for iOS."
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Renatus Madrigal", email = "listener1381@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "kivy[base] (>=2.3.1,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pymobiledevice3 (>=4.20.11,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"
